--- a/src/style/App.scss
+++ b/src/style/App.scss
@@ -8,7 +8,9 @@
 a{
     text-decoration: none !important;
 }
-
+.btn-primary{
+    background-color: $colorRed-0 !important;
+}
 
 // button in folder (component / button ) shared in all project 
 .baseBtn {
