--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -25,7 +25,7 @@ body {
   background-color: black;
  }
 
-
+.txt_blocked,
  .txt_delivery,
 .txt_delivered,
 .txt_pending,
@@ -48,7 +48,10 @@ body {
     background-color: rgba($color:#FFC107, $alpha: 0.1);
     // background-color: #fff5f8;
 }
-
+.txt_blocked{
+  color: black;
+  background-color: rgba($color:#000, $alpha: 0.2);
+}
 .txt_shipped {
     color: #9804F0;
     background-color: rgba($color:#9804F0, $alpha: 0.1);
@@ -72,7 +75,5 @@ body {
 
 .txt_rejected {
     color: #E20000;
-        background-color: rgba($color:#E20000, $alpha: 0.1);
-
-
+        background-color: rgba($color:#E20000, $alpha: 0.1); 
 }
