--- a/src/Components/Navber/Navber.scss
+++ b/src/Components/Navber/Navber.scss
@@ -5,7 +5,13 @@
     display: flex;
     justify-content: center;
     align-items: center;
-
+    height: 60px !important;
+    .active {
+    background-color: #F1F1F1 !important;
+  }
+a{
+    color: #030303 !important;
+}
     .nav__notification {
         background-color: $colorRed-0 ;
         color: $colorLight;
@@ -34,6 +40,8 @@
     }
 }
 
+
+
 .input__search {
     padding-left: 20px !important;
     background: #F1F1F1 !important;
@@ -48,7 +56,7 @@
     border-color: $colorRed-0
 }
 
-.subNav{
+.subNav {
     .nav-link {
         font-family: $fontBase;
         font-style: normal;
@@ -61,4 +69,124 @@
     .active {
         color: $colorRed-0 !important;
     }
+}
+
+@import url("https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap");
+
+:root {
+    --font-base: "DM Sans", sans-serif;
+
+
+    --primary-color: #edf2f8;
+    --secondary-color: #313bac;
+    --black-color: #030303;
+    --lightGray-color: #e4e4e4;
+    --gray-color: #6b7688;
+    --brown-color: #46364a;
+    --white-color: #ffffff;
+}
+
+.app__navbar-menu {
+    width: 35px;
+    height: 35px;
+    border-radius: 50%;
+    position: relative;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    background-color: var(--secondary-color);
+
+    svg {
+        width: 70%;
+        height: 70%;
+        color: var(--white-color);
+    }
+
+    div {
+        position: fixed;
+        top: 0;
+        bottom: 0;
+        left:  0;
+        z-index: 5;
+        padding: 1rem;
+        width: 50%;
+
+        @media screen and (max-width:767px) {
+            width: 80%;
+        }
+        
+
+        height: 100vh;
+        display: flex;
+        justify-content: flex-end;
+        align-items: flex-end;
+        flex-direction: column;
+
+        background: url('../../assets/Images/bgWhite.png');
+        background-color: var(--white-color);
+        background-size: cover;
+        background-repeat: repeat;
+        box-shadow: 0 0 40px rgba(168, 168, 168, 0.15);
+
+        svg {
+            width: 35px;
+            height: 35px;
+            color: var(--secondary-color);
+            margin: 0.5rem 1rem;
+        }
+
+        ul {
+            list-style: none;
+            list-style: none;
+            margin: 0;
+            padding: 0;
+            width: 100%;
+            height: 100%;
+
+            display: flex;
+            align-items: flex-start;
+            justify-content: flex-start;
+            flex-direction: column;
+
+            li {
+                margin: 1rem; 
+                a {
+                    color: var(--gray-color);
+                    text-decoration: none;
+                    font-size: 1rem;
+                    // text-transform: uppercase;
+                    font-weight: 900;
+                    font-family: var(--font-base);
+                    transition: all 0.3s ease-in-out;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    font-size: larger;
+                    &:hover {
+                        color: var(--secondary-color);
+                    }
+                }
+            }
+
+        }
+
+        @media screen and (min-width:900px) {
+            display: none;
+        }
+    }
+
+    @media screen and (min-width:900px) {
+        display: none;
+    }
+}
+.navbar-expand .navbar-nav .dropdown-menu {
+    position: absolute;
+    left: -135px; 
+    background-color: rgba((248,249,250),var(--bs-bg-opacity))!important;
+    /* right: -10px; */
+}
+.dropdown-toggle::after {
+    display: none !important; 
 }
