--- a/src/Components/Sidebar/Sidebar.scss
+++ b/src/Components/Sidebar/Sidebar.scss
@@ -16,6 +16,7 @@
 /* Sidebar */
 .sidebar {
     color: white;
+
     // background-color: $colorDark;
     .top_section {
         display: flex;
@@ -62,7 +63,7 @@
             // border-left: 4px solid $colorRed-0;
             transition: 0.2s cubic-bezier(0.6, -0.28, 0.735, 0.045);
             color: $colorRed-0;
-            position: relative; 
+            position: relative;
 
             &::after {
                 content: '';
@@ -173,16 +174,26 @@
 
 
 .side {
-    height: 100%;                                           
+    height: 100%;
     position: fixed;
     top: 0;
     left: 0;
-    background-color: black;
+    background-color: #000;
     z-index: 99;
     // overflow: scroll;
     // overflow-x: hidden;
+    // display: none;
 }
 
 .react-tooltip {
     z-index: 999999999999999 !important;
+}
+
+@media screen and (max-width:900px) {
+    .main-container { 
+        display: none !important;
+    }
+    .adminLayout{
+        width: 100% !important;
+    }
 }
