--- a/src/Pages/Chat/chat.scss
+++ b/src/Pages/Chat/chat.scss
@@ -12,10 +12,9 @@
         height: calc(100vh - 70px);
         padding: 10px;
         border-radius: 16px;
-
+        
         @media screen and (max-width:770px) {
             min-height: calc(100vh - 70px) !important;
-
         }
 
     }
@@ -96,10 +95,10 @@
             display: flex;
             flex-direction: column;
             align-content: space-between;
-            gap: 20px;
+            gap: 16px;
 
             .app__Live_chat {
-                background: #d9d9d998;
+                // background: #d9d9d998;
                 border-radius: 16px;
                 height: calc(100% - 10%) !important;
                 padding: 10px 20px;
@@ -129,27 +128,24 @@
                         display: flex;
                         justify-content: center;
                         align-items: center;
-
-                        // padding-bottom: 5px; 
+                        button{
+                            font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+                            font-size: 18px !important;
+                        }  
                         .power-button {
                             display: flex;
-                            gap: 15px;
+                            gap: 10px;
                             align-items: center;
                             justify-content: center;
-                            padding: 1rem;
+                            // padding: 1rem;
+                            padding: 10px 15px ;
                             border: none;
-                            border-radius: 16px;
-                            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+                            border-radius: 16px; 
                             transition: all 0.2s ease;
                             background-color: #f0f0f0;
                             transition: transform 0.2s ease;
                             transform: scale(0.8);
-
-                        }
-
-                        .power-button:hover {
-                            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-                        }
+                        } 
 
                         .power-button:focus {
                             outline: none;
@@ -166,8 +162,8 @@
                         }
 
                         .icon {
-                            width: 1.2rem;
-                            height: 1.2rem;
+                            width: 1.1rem;
+                            height: 1.1rem;
                         }
 
                         .power-button:hover {
@@ -188,14 +184,16 @@
 
             .app__send {
                 height: 10%;
-                padding: 10px;
+                padding: 5px 10px;
                 display: flex;
                 align-items: center;
-                background: #D9D9D9;
+                background: #f6f6f6;
                 border-radius: 12px;
                 gap: 10px;
 
                 input {
+                    box-shadow: 0 0 10px #f6f6f6    ;
+                    border-radius: 17px !important;
                     background-color: #FFFFFF !important;
                 }
 
@@ -355,14 +353,34 @@
 }
 
 .circle {
-    display: inline-block;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: 500;
+    color: #87888d;
+    background-color: #f5f8fa;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    border-radius: 0.475rem;
+}  .symbol-label {
     width: 50px;
     height: 50px;
     border-radius: 50%;
-    font-size: 24px;
-    font-weight: bold;
-    text-align: center;
-    line-height: 50px;
-    // margin: 10px;
-    // col
 }
+
+/***
+ * 
+ * .bg-light-warning {
+    // background-color: #fff8dd !important;
+    background-color: rgba($color: #ffc700, $alpha: 0.1);
+}.text-warning {
+    color: #ffc700 !important;
+}
+ */
+
+ .chatSupportStatus{
+    color: #a1a5b7;
+    font-size: 0.95rem !important
+    
+ }
