--- a/src/style/App.scss
+++ b/src/style/App.scss
@@ -145,3 +145,10 @@ td {
         color: #FFFFFF !important;
     }
 }
+
+.app__addOrder-form {
+    background-color: #f9f9f9!important;
+    border-radius: 5px;
+    margin-top: 16px!important;
+    padding: 32px 16px 10px;
+}
