--- a/src/Components/Sidebar/Sidebar.scss
+++ b/src/Components/Sidebar/Sidebar.scss
@@ -11,7 +11,10 @@
         padding: 10px;
     }
 }
-
+main {
+    background-color: white !important
+    ;
+}
 /* Sidebar */
 .sidebar {
     color: white;
@@ -31,7 +34,7 @@
         .logo {
             font-size: 18px;
             line-height: 0;
-            padding: 30px 60px 0px 60px;
+            padding: 30px 30px 0px 30px;
             width: 170px;
             display: flex;
             justify-content: center;
