--- a/src/style/App.scss
+++ b/src/style/App.scss
@@ -136,3 +136,85 @@ td {
 td {
     white-space: nowrap !important;
 }
+
+
+#ready {
+    text-align: center;
+    z-index: 999999;
+    position: fixed;
+    inset: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* color: var(--mainColor); */
+    // background-color: var(--mainColor);
+    color: #313bac ;
+    background-color: #000000;
+  }
+
+
+  .input-group{
+    position: relative;
+    border-radius: 0.75rem;
+    background-color: #eee;
+    display: flex;
+    align-items: center;
+  }
+
+
+  .input-group input{
+    width: 100%;
+    height: 100%;
+    display: block;
+    border-radius: 0.75rem;
+    border: none;
+    padding: 15px 30px 15px 20px; 
+  }
+
+
+  .input-group input:focus{
+    outline: none;
+  }
+  
+  .left-auto {
+    right: 10px !important;  
+    left: auto !important;   
+  }
+  
+  .right-auto {
+    right: auto !important;  
+    left: 10px !important; 
+  }
+  
+  .input-group i{
+    position: absolute;
+    top: 50%;
+    right: 15px;  
+    left: auto; 
+    transform: translateY(-50%);
+    font-size: 18px;
+    padding: 5px;
+    /* background-color: var(); */
+    /* background-color: var(--secondColor); */
+    background-color: transparent !important;
+    border: none;
+    cursor: pointer;
+  }
+  
+  .left-i-auto {
+    right: 15px !important;  
+    left: auto !important;   
+  }
+  
+  .right-i-auto {
+    right: auto !important;  
+    left: 15px !important;   
+  }
+  
+  @media screen and (max-width: 768px) {
+    .input-group input{
+      padding-left: 20px !important;
+      padding-right: 10px !important;
+    }
+  }
+  
